added html tags

--- a/index.html
+++ b/index.html
@@ -1,44 +1,59 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML Album Cover</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <div id="front" class="album">
-        <div id="title-box">
+<html>
+        <!DOCTYPE html>
+        <html lang="en">
+          <head>
+            <meta charset="UTF-8" />
+            <title>HTML Album Cover</title>
+            <link rel="stylesheet" href="css/style.css" />
+          </head>
+          <body>
+            <div class="wrapper">
+              <div id="front" class="album">
+                <div id="title-box">
+                  <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+                  <h4>PHARRELL WILLIAMS</h4>
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+                  <!-- Level 2 'HAPPY' Header -->
+                  <h2>HAPPY</h2>
 
-          <!-- Level 2 'HAPPY' Header -->
+                  <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+                  <h4>FROM DESPICABLE ME 2</h4>
+                </div>
+              </div>
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+              <div id="back" class="album">
+                <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+                <h3>FROM DESPICABLE ME 2</h3>
 
-        </div>
-      </div>
+                <!-- Level 1 'HAPPY' Header -->
+                <h1>HAPPY</h1>
 
-      <div id="back" class="album">
+                <!-- Level 3 'WRITTEN BY...' Header -->
+                <h3>WRITTEN BY...</h3>
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+                <!-- pararaph text 'PUBLISHED BY...' -->
+                <p>PUBLISHED BY...</p>
 
-        <!-- Level 1 'HAPPY' Header -->
+                <!-- span text 'PHARRELLWILLIAMS.COM' -->
+                <span>PHARRELLWILLIAMS.COM</span>
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+                <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+                <img
+                  src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+                />
+                <!-- span text 'COLUMBIARECORDS.COM' -->
+                <span>COLUMBIARECORDS.COM'</span>
 
-        <!-- pararaph text 'PUBLISHED BY...' -->
+                <br />
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
-        <!-- span text 'COLUMBIARECORDS.COM' -->
-
-        <br>
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+                <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+                <img
+                  src="https://s3.amazonaws.com/learn-verified/sony-logo.png"
+                />
+              </div>
+            </div>
+          </body>
+        </html>
       </div>
     </div>
   </body>
